Soluciono incidencia DCSRSP-319
CAS: con perfil abogado en CAS no me deja entrar